added some details to head partial, and create, 404, and index pages. added public folder

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -8,7 +8,7 @@
 
   <div class="not-found content">
     <p>OOPS, page not found :/</p>
-    <p>Try looking up another blog post or going back to the <a href="/">home page</a>.</p>  
+    <p>Go back to the <a href="/">home page</a> and look up another course.</p>  
   </div>
 <%- include('./partials/footer.ejs') %>
 </body>
