removed ejs code from index file. app is working now

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <footer>
-  Created by:
-  Arlene Haskins
-  Chez'lene Cornwall
+  <p>Created by:</p>
+  <p>Arlene Haskins</p>
+  <p>Chez'lene Cornwall</p>
+  <p>Zac Meredith</p>
 </footer>
