--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
-<footer>
-  <p>Created by:</p>
-  <p>Arlene Haskins</p>
-  <p>Chez'lene Cornwall</p>
-  <p>Zac Meredith</p>
-</footer>
+<div class="footer-wrapper">
+  <footer>
+    <p>Created by:&ensp;Arlene Haskins, Chez'lene Cornwall, & Zac Meredith</p>
+    <p>&copy; 2024</p>
+  </footer>
+</div>
