--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,9 +1,11 @@
-<nav>
-  <div class="site-title">
-    <a href="/"><h1>Group Two Final Project</h1></a>
-  </div>  
-  <ul>
-    <li><a href="/">Courses</a></li>
-    <li><a href="/courses/create">Create a new course</a></li>
-  </ul>
+<div class="nav-wrapper">
+  <nav>
+      <div class="site-title">
+        <a href="/"><h1>Group Two Final Project</h1></a>
+      </div>  
+      <ul>
+        <li><a href="/">Courses</a></li>
+        <li><a href="/courses/create">Create a new course</a></li>
+      </ul>
 </nav>
+</div>
