--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <div class="footer-wrapper">
   <footer>
-    <p>Created by:&ensp;Arlene Haskins, Chez'lene Cornwall, & Zac Meredith</p>
+    <p>Created by:&ensp;Arlene Haskins & Chez'lene Cornwall</p>
     <p>&copy; 2024</p>
   </footer>
 </div>
