--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
       </div>  
       <ul>
         <li><a href="/">Courses</a></li>
-        <li><a href="/courses/create">Create a new course</a></li>
+        <li><a href="/courses/create">Create a New Course</a></li>
       </ul>
 </nav>
 </div>
