--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,11 @@
+/* color pallette */
 :root {
   --ovaline: #a0af84;
   --outerSpace: #4C5B61;
   --lavenderPink: #FFC4EB;
   --palePurple: #FFE4FA;
   --tiffanyBlue: #86BBBD;
+  --richBlack: #0D1B1E;
 }
 
 body {
@@ -25,36 +27,117 @@ nav {
   position: sticky;
   top: 0;
   z-index: 100;
+  
 }
 
 nav ul {
   list-style: none;
   padding: 0;
-  margin-top: 30px;
   display: flex;
   justify-content: space-evenly;
+  align-items: flex-end;
 
   /* style text */
   font-family: "urbana", sans-serif;
   font-weight: 700;
   font-style: normal;
   font-size: 20px;
+  text-transform: uppercase;
+
 }
 
 nav a {
   color: var(--palePurple);
   text-decoration: none;
-  margin: 25px;
 }
 
 .site-title {
-
+  padding-top: 15px;
   /* text style */
   font-family: "viktor-script", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 45px;
+  font-size: 30px;
   color: var(--palePurple);
+}
+
+.content {
+  padding-top: 100px;
+  margin-left: 20px;
+  padding-bottom: 2.5rem;
+}
+
+/* index */
+.content h2 {
+
+  /*style text */
+  font-family: "sauna-new", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
+}
+
+.content p {
+
+  /* style text */
+    font-size: 15px;
+    font-family: "marigny", "sans-serif";
+    font-weight: 400;
+    font-style: normal;
+    color: var(--richBlack);
+}
+
+/* course/create */
+.create-course {
+  padding-top: 130px;
+}
+
+.create-course form {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.create-course input,
+.create-course textarea {
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  padding: 8px;
+}
+
+.create-course label {
+  display: block;
+  margin-top: 24px;
+
+  /* style text */
+  font-size: 15px;
+  font-family: "marigny", "sans-serif";
+  font-weight: 400;
+  font-style: normal;
+  color: var(--richBlack);
+}
+
+textarea{
+  height: 120px;
+}
+
+.create-course button{
+  margin-top: 20px;
+  background: var(--ovaline);
+  border-radius: 5px;
+  color: var(--palePurple);
+  padding: 6px;
+  border: 0;
+  font-size: 1.2em;
+  cursor: pointer;
+  justify-self: center;
+  width: 100%;
+
+  /* style text */
+  font-family: "urbana", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 25px;
 }
 
 /* footer */
@@ -63,6 +146,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 2.5rem;
 
   display: flex;
   justify-content: space-around;
@@ -76,5 +160,5 @@ footer p {
     font-family: "marigny", "sans-serif";
     font-weight: 400;
     font-style: normal;
-    color: var(--outerSpace);
+    color: var(--richBlack);
 }
