--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,14 @@
 
   <div class="courses content">
     <h2>All Courses</h2>
-
+    <% if (courses.length > 0) { %>
+      <% courses.forEach(course => { %>
+          <h3 class="names"><%=course.name%></h3>
+          <p class="description"><%=course.discription%></p>
+      <% }) %>
+  <% } else { %>
+          <p>There are no courses to display at this time. </p>
+      <% } %>
   </div>
 
   <%- include('./partials/footer.ejs') %>
