--- a/views/create.ejs
+++ b/views/create.ejs
@@ -10,6 +10,8 @@
     <form action="/courses" method="POST">
       <label for="name">Course name:</label>
       <input type="text" id="name" name="name" required>
+      <label for="credits">Number of Credits</label>
+      <input type="number" id="credits" name="credits" required>
       <label for="subject">Subject:</label>
       <input type="text" id="subject" name="subject" required>
       <label for="description">Course Description:</label>
