pushing saved changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <% if (courses.length > 0) { %>
       <% courses.forEach(course => { %>
           <h3 class="names"><%=course.name%></h3>
-          <p class="description"><%=course.discription%></p>
+          <p class="description"><%=course.description%></p>
       <% }) %>
   <% } else { %>
           <p>There are no courses to display at this time. </p>
