added authRoutes and authController

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,10 @@
-<%- include('./partials/head.ejs') %>
+<%- include('./partials/head.ejs'); -%>
+
+<h1>Login</h1>
+
+<%- include('./partials/footer.ejs'); -%>
+
+<!-- <%- include('./partials/head.ejs') %>
 
     <%- include("./partials/nav.ejs") %>
 
@@ -50,4 +56,4 @@
             console.log(err);
             }
         });
-       </script>
+       </script> -->
