--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,10 @@
-<%- include('./partials/head.ejs') %>
+<%- include('./partials/head.ejs''); -%>
+
+<h1>Sign up</h1>
+
+<%- include('./partials/footer.ejs'); -%>
+
+<!-- <%- include('./partials/head.ejs') %>
 
   <%- include("./partials/nav.ejs") %>
 
@@ -51,4 +57,4 @@
       console.log(err);
     }
   });
- </script>
+ </script> -->
