fixed typo in signup view

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,8 +1,8 @@
-<%- include('./partials/head.ejs''); -%>
+<%- include('./partials/head.ejs') -%>
 
 <h1>Sign up</h1>
 
-<%- include('./partials/footer.ejs'); -%>
+<%- include('./partials/footer.ejs') -%>
 
 <!-- <%- include('./partials/head.ejs') %>
 
