added tokenability, middleware, checkUser and logout

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,4 @@
-<%- include('./partials/head.ejs'); -%>
-
-<h1>Login</h1>
-
-<%- include('./partials/footer.ejs'); -%>
-
-<!-- <%- include('./partials/head.ejs') %>
+<%- include('./partials/head.ejs') %>
 
     <%- include("./partials/nav.ejs") %>
 
@@ -21,39 +15,39 @@
       
 <%- include('./partials/footer.ejs') %>
 
-       <script>
-        const form = document.querySelector('form');
-        const emailError = document.querySelector('.email.error');
-        const passwordError = document.querySelector('.password.error');
-        
-        form.addEventListener('submit', async (e) => {
-            e.preventDefault();
+<script>
+    const form = document.querySelector('form');
+    const emailError = document.querySelector('.email.error');
+    const passwordError = document.querySelector('.password.error');
 
-            //reset errors
-            emailError.textContent = '';
-            passwordError.textContent = '';
+    form.addEventListener('submit', async (e) => {
+        e.preventDefault();
 
-            //get the values
-            const email = form.email.value;
-            const password = form.password.value;
+        //reset errors
+        emailError.textContent = '';
+        passwordError.textContent = '';
 
-            try {
-            const res = await fetch('/login', {
-                method: 'POST',
-                body: JSON.stringify({email, password}),
-                headers: { 'Content-Type': 'application/json' }
-            });
-            const data = await jwt.json();
-            console.log(data);
-            if (data.errors) {
-                emailError.textContent = data.errors.email;
-                passwordError.textContent = data.errors.password;
-            }
-            if (data.user) {
-                location.assign('/courses');
-            }}
-            catch (err) {
-            console.log(err);
-            }
+        //get the values
+        const email = form.email.value;
+        const password = form.password.value;
+
+        try {
+        const res = await fetch('/login', {
+            method: 'POST',
+            body: JSON.stringify({email, password}),
+            headers: { 'Content-Type': 'application/json' }
         });
-       </script> -->
+        const data = await res.json();
+        console.log(data);
+        if (data.errors) {
+            emailError.textContent = data.errors.email;
+            passwordError.textContent = data.errors.password;
+        }
+        if (data.user) {
+            location.assign('/courses');
+        }}
+        catch (err) {
+        console.log(err);
+        }
+    });
+</script>
