--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,14 +1,8 @@
-<%- include('./partials/head.ejs') -%>
-
-<h1>Sign up</h1>
-
-<%- include('./partials/footer.ejs') -%>
-
-<!-- <%- include('./partials/head.ejs') %>
+<%- include('./partials/head.ejs') %>
 
   <%- include("./partials/nav.ejs") %>
 
- <form>
+ <form action="/signup">
   <h2>Sign up</h2>
   <label for="email">Email</label>
   <input type="test" name="email" required>
@@ -57,4 +51,4 @@
       console.log(err);
     }
   });
- </script> -->
+ </script>
