added teacher checkbox to signup page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
     <%- include("./partials/nav.ejs") %>
 
-    <form action="/signup">
+    <form action="/login">
         <h2>Log in</h2>
         <label for="email">Email</label>
         <input type="test" name="email" required>
