--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,11 +5,13 @@
  <form action="/signup">
   <h2>Sign up</h2>
   <label for="email">Email</label>
-  <input type="test" name="email" required>
+  <input type="text" name="email" required>
   <div class="email error"></div>
   <label for="password">Password</label>
   <input type="password" name="password" required>
-  <div class="password error"></div>
+  <div class="role error"></div>
+  <label for="role">I am a teacher</label>
+  <input type="checkbox" name="role" value="role">
   <button>Sign up</button>
  </form>
 
