changed user schema verbiage for clarity

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,9 +9,9 @@
   <div class="email error"></div>
   <label for="password">Password</label>
   <input type="password" name="password" required>
-  <div class="role error"></div>
-  <label for="role">I am a teacher</label>
-  <input type="checkbox" name="role" value="role">
+  <div class="password error"></div>
+  <label for="teacher">I am a teacher</label>
+  <input type="checkbox" name="teacher" value="teacher">
   <button>Sign up</button>
  </form>
 
