--- a/views/description.ejs
+++ b/views/description.ejs
@@ -5,10 +5,8 @@
 
     <div class="details content">
         <h2><%= course.name %></h2>
-        <div class="content">
-            <p><%= course.description %></p>
-        </div>
-        <a class="delete" data-doc="<%=course._id %>">delete</a>
+        <p><%= course.description %></p>
+        <a class="delete" data-doc="<%=course._id %>" src="../public/trashcan.svg">delete</a>
     </div>
     <%- include ('./partials/footer.ejs') %> 
  
