--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,8 @@
         <label for="password">Password</label>
         <input type="password" name="password" required>
         <div class="password error"></div>
+        <label for="teacher">I am a teacher</label>
+        <input type="checkbox" name="teacher" value="true">
         <button>Log in</button>
     </form>
       
@@ -30,11 +32,12 @@
         //get the values
         const email = form.email.value;
         const password = form.password.value;
+        const teacher = form.teacher.checked;
 
         try {
         const res = await fetch('/login', {
             method: 'POST',
-            body: JSON.stringify({email, password}),
+            body: JSON.stringify({email, password, teacher}),
             headers: { 'Content-Type': 'application/json' }
         });
         const data = await res.json();
