--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,8 +10,6 @@
         <label for="password">Password</label>
         <input type="password" name="password" required>
         <div class="password error"></div>
-        <label for="teacher">I am a teacher</label>
-        <input type="checkbox" name="teacher" value="true">
         <button>Log in</button>
     </form>
       
@@ -32,25 +30,24 @@
         //get the values
         const email = form.email.value;
         const password = form.password.value;
-        const teacher = form.teacher.checked;
 
         try {
-        const res = await fetch('/login', {
-            method: 'POST',
-            body: JSON.stringify({email, password, teacher}),
-            headers: { 'Content-Type': 'application/json' }
-        });
-        const data = await res.json();
-        console.log(data);
-        if (data.errors) {
-            emailError.textContent = data.errors.email;
-            passwordError.textContent = data.errors.password;
-        }
-        if (data.user) {
-            location.assign('/courses');
-        }}
-        catch (err) {
-        console.log(err);
+            const res = await fetch('/login', {
+                method: 'POST',
+                body: JSON.stringify({email, password}),
+                headers: { 'Content-Type': 'application/json' }
+            });
+            const data = await res.json();
+            console.log(data);
+            if (data.errors) {
+                emailError.textContent = data.errors.email;
+                passwordError.textContent = data.errors.password;
+            }
+            if (data.user) {
+                location.assign('/courses');
+            }
+        } catch (err) {
+            console.log(err);
         }
     });
 </script>
