--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-/* color pallette */
+/* color palette */
 :root {
   --ovaline: #a0af84;
   --outerSpace: #4C5B61;
@@ -7,7 +7,6 @@
   --tiffanyBlue: #86BBBD;
   --richBlack: #0D1B1E;
 }
-
 
 body {
   background-color: var(--lavenderPink);
@@ -28,7 +27,6 @@ nav {
   position: sticky;
   top: 0;
   z-index: 100;
-  
 }
 
 nav ul {
@@ -82,7 +80,6 @@ nav a {
 }
 
 .no-classes {
-
   /* style text */
     font-size: 20px;
     font-family: "marigny", "sans-serif";
@@ -121,9 +118,10 @@ nav a {
 }
 
  /* description styles */
- .details{
+.details{
   position: relative;
 }
+
 .delete{
   position: absolute;
   right: 0;
@@ -134,6 +132,7 @@ nav a {
   /*style text */
   text-transform: uppercase;
 }
+
 .delete:hover{
   cursor: pointer;
   box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
@@ -197,8 +196,6 @@ textarea{
 
 /* 404 page */
 .not-found p {
-
-
   /* style text */
   font-size: 20px;
   font-family: "marigny", "sans-serif";
@@ -208,20 +205,17 @@ textarea{
 }
 
 /* footer */
-
 footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 2.5rem;
-
   display: flex;
   justify-content: space-around;
   background-color: var(--tiffanyBlue);
 }
 
 footer p {
-
   /* style text */
   font-size: 10px;
     font-family: "marigny", "sans-serif";
@@ -238,8 +232,8 @@ footer p {
   height:100%;
   width:100%;
   margin:0;
-
 }
+
 form {
   margin: auto;
   padding: 70px;
@@ -247,7 +241,6 @@ form {
   background: var(--palePurple);
   border-radius: 10px;
   box-shadow: 1px 2px 3px rgba(0,0,0,0.1);
-
 }
 
 .login-body h2{
@@ -255,7 +248,6 @@ form {
   font-weight: 900;
   margin-bottom: 40px;
   color: var(--ovaline);
-  
 }
 
 input {
@@ -272,7 +264,6 @@ input {
    font-size: 20px;
    font-style: normal;
    color: var(--ovaline)
-
 }
 
 input:hover {
@@ -301,6 +292,9 @@ form button {
   font-size: 25px;
 }
 
+.center{
+  text-align: center;
+}
 
 label {
   display: block;
