--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/head.ejs') %>
+<%- include ('./partials/nav.ejs') %>
 
 <div class="login-body">
     <form class="content" action="/login">
