--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/head.ejs') %>
+<%- include ('./partials/nav.ejs') %>
 
 <div class="login-body">
   <form action="/signup" class="content">
@@ -9,9 +10,9 @@
     <label for="password">Password</label>
     <input type="password" name="password" required>
     <div class="password error"></div>
-    <label for="teacher">I am a teacher</label>
+    <label class="center" for="teacher">Check the box below if you are a teacher</label>
     <input type="checkbox" name="teacher" value="teacher" class="checkbox">
-    <a href="/login">Already have an account?</a>
+    <a class="center" href="/login">Already have an account?</a>
     <button>Sign up</button>
    </form>
 </div>
