--- a/views/description.ejs
+++ b/views/description.ejs
@@ -6,7 +6,11 @@
     <div class="details content">
         <h2><%= course.name %></h2>
         <p><%= course.description %></p>
-        <a class="delete" data-doc="<%=course._id %>" src="../public/trashcan.svg">delete</a>
+        <% if (user.teacher) { %>
+        <a class="delete" data-doc="<%=course._id %>" src="../public/trashcan.svg">Delete</a>
+        <% } else { %>
+        <a class="add" data-doc="<%=course._id %>" src="../public/plus.svg">Add to my schedule</a>
+        <% } %>
     </div>
     <%- include ('./partials/footer.ejs') %> 
  
@@ -24,6 +28,21 @@
             .catch(err => console.log(err));
         })
     </script>
+
+<script>
+    const plus = document.querySelector('a.add');
+
+    plus.addEventListener('click', (e) => {
+        const endpoint = `/schedule/${plus.dataset.doc}`;
+
+        fetch(endpoint, {
+            method: `POST`
+        })
+        .then(response => response.json())
+        .then(data => window.location.href = data.redirect)
+        .catch(err => console.log(err));
+    })
+</script>
 
 
 </html>
