added id to welcome statement in nav bar for styling

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
       </div>  
       <ul>
         <% if (user) { %>
-          <li>Welcome, <%= user.email %></li>
+          <li id="welcome">Welcome, <%= user.email %></li>
           <li><a href="/">Courses</a></li>
         <% if (user.teacher) { %>
           <li><a href="/courses/create">Create a New Course</a></li>
