--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -8,7 +8,7 @@
 
   <div class="schedule content">
     <h2>Schedule</h2>
-    <% if (courses.length > 0) { %>
+    <% if (user.schedule.length > 0) { %>
         <% courses.forEach(course => { %>
           <a href="/schedule/<%= course._id %>" class="single">
             <h3 class="names"><%=course.name%></h3>
@@ -16,7 +16,7 @@
           </a>
         <% }) %>
     <% } else { %>
-            <p class="no-classes">There are no courses to display at this time. </p>
+            <p class="no-classes">There are no courses in your schedule at this time. </p>
         <% } %>
   </div>
 
