--- a/views/description.ejs
+++ b/views/description.ejs
@@ -4,7 +4,9 @@
     <%- include ('./partials/nav.ejs') %>
 
     <div class="details content">
-        <h2><%= course.name %></h2>
+        <h2><%= course.subject %></h2>
+        <h3><%= course.name %></h3>
+        <p><%= course.credits %> credits</p>
         <p><%= course.description %></p>
         <% if (user.teacher) { %>
         <a class="delete" data-doc="<%=course._id %>" src="../public/trashcan.svg">Delete</a>
@@ -12,6 +14,7 @@
         <a class="add" data-doc="<%=course._id %>" src="../public/plus.svg">Add to my schedule</a>
         <% } %>
     </div>
+
     <%- include ('./partials/footer.ejs') %> 
  
     <script>
@@ -31,16 +34,19 @@
 
 <script>
     const plus = document.querySelector('a.add');
+    const schedule = user.schedule;
 
     plus.addEventListener('click', (e) => {
-        const endpoint = `/schedule/${plus.dataset.doc}`;
-
         fetch(endpoint, {
             method: `POST`
         })
-        .then(response => response.json())
-        .then(data => window.location.href = data.redirect)
-        .catch(err => console.log(err));
+        .then(schedule.push(plus.dataset.doc));
+        res.redirect('/schedule');
+        // const endpoint = `/schedule/${plus.dataset.doc}`;
+
+        // .then(response => response.json())
+        // .then(data => window.location.href = data.redirect)
+        // .catch(err => console.log(err));
     })
 </script>
 
