--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,10 +5,13 @@
       </div>  
       <ul>
         <% if (user) { %>
-          <li>Welcome, <%= user.email %></li>
+          <li id="welcome">Welcome, <%= user.email %></li>
           <li><a href="/">Courses</a></li>
         <% if (user.teacher) { %>
           <li><a href="/courses/create">Create a New Course</a></li>
+          <% } %>
+        <% if (!user.teacher) { %>
+          <li><a href="/schedule">My Schedule</a></li>
           <% } %>
           <li><a href="/logout">Log out</a></li>
         <% } else { %>
